<resources>
    <string name="app_name">Scrabble Score Keeper</string>
    <string name="imageContent">app background image</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="initialScore">0</string>
    <string name="initialWord"> </string>
    <string name="resetAll">reset all</string>
    <string name="addToPlayer1">add</string>
    <string name="addToPlayer2">add</string>
    <string name="reset">reset</string>
    <string name="button2w">2xW</string>
    <string name="button3w">3xW</string>
    <string name="button2l">2xL</string>
    <string name="button3l">3xL</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="d">d</string>
    <string name="e">e</string>
    <string name="f">f</string>
    <string name="g">g</string>
    <string name="h">h</string>
    <string name="i">i</string>
    <string name="l">l</string>
    <string name="m">m</string>
    <string name="n">n</string>
    <string name="o">o</string>
    <string name="p">p</string>
    <string name="q">q</string>
    <string name="r">r</string>
    <string name="s">s</string>
    <string name="t">t</string>
    <string name="u">u</string>
    <string name="v">v</string>
    <string name="z">z</string>
    <string name="addBonus">bonus +10</string>
</resources>
